--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				"content": "<p>Welcome to my site!</p>"
 			}, {
 				"title": "Work",
-				"content": "<p>I am employed as the Digital Development Lead at BPP Learning Media in Manchester.</p><p>As part of the Learning Media team we create and maintain BPP's online educational environments, implementing web courses and assessments for both internal use and external clients.</p>"
+				"content": "<p>I am employed as the Digital Platforms Team Leader at BPP Learning Media in Manchester.</p><p>As part of the Learning Media team we create and maintain BPP's online educational environments, implementing web courses and assessments for both internal use and external clients.</p>"
 			}, {
 				"title": "Projects",
 				"content": "<p>Currently nothing public, so [WIP]. Sorry.</p>"
